syntax = "proto3";

package JAAS;

message J9CompileRequest
   {
   uint32 methodOffset = 1;
   uint32 classOffset = 2;
   uint32 classChainCOffset = 3;
   uint32 classChainCLOffset = 4;
   }

message J9ClientMessage
   {
   oneof MessageKind
      {
      J9CompileRequest compile_request = 1;
      bool single_bool = 2;
      }
   }

enum J9InformationType
   {
   canMethodEnterEventBeHooked = 0;
   canMethodExitEventBeHooked = 1;
   }

message J9ServerMessage
   {
   oneof MessageKind
      {
      uint32 compilation_code = 1;
      J9InformationType info_0 = 2;
      }
   }

service J9CompileService
   {
   rpc Compile (stream J9ClientMessage) returns (stream J9ServerMessage);
   }
